added abstract in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,5 @@
+abstract = Yet Another Templating system for Perl
+
 [NextRelease]
 format = Changes for Template::Perlish:%n%n%-9v %{yyyy-MM-dd HH:mm:ssZZZZZ VVVV}d%{ (TRIAL RELEASE)}T
 
